--- a/WOLFSK2/src/resources/lang/English.yml
+++ b/WOLFSK2/src/resources/lang/English.yml
@@ -1,6 +1,6 @@
-# 17.09.2021 by Patryk Prawda (AJONX)
+# 19.11.2021 by Patryk Prawda (AJONX)
 lang_name: English
-lang_version: 1.2
+lang_version: 1.3
 lang_author: Patryk Prawda (AJONX)
 
 plugin_starting: Starting...
@@ -23,6 +23,7 @@ collections_registred_bossbar: Bossbar elements regstred.
 collections_registred_actionbar: Actionbar elements regstred.
 collections_registred_loader: Loader elements registred.
 collections_registred_hologram: Hologram elements registred.
+collections_registred_yaml: YAML files elements registred.
 objects_registred_inventory: Inventory elements regstred.
 all_registred_correctly: All elements registred correctly.
 
